force-app/main/default/objects/Program_Assignment__c/fields/CPS_CASE_ID__c.field-meta.xml
<CustomField>
    <fullName>CPS_CASE_ID__c</fullName>
    <formula>IF(  
Service_Case__c != null, Service_Case__r.Name , 
IF(Investigation__c!= null ,Investigation__r.Name, &apos;&apos; ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPS / CASE ID</label>
    <type>Text</type>
</CustomField>