force-app/main/default/objects/Program_Assignment__c/fields/Program_Area__c.field-meta.xml
<CustomField>
    <fullName>Program_Area__c</fullName>
    <label>Program Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CPS-IR</fullName>
            </value>
            <value>
                <fullName>CPS-AR</fullName>
            </value>
            <value>
                <fullName>In Home</fullName>
            </value>
            <value>
                <fullName>GAP</fullName>
            </value>
            <value>
                <fullName>Adoption</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>