force-app/main/default/objects/Program_Assignment__c/fields/Program_Sub_Area__c.field-meta.xml
<CustomField>
    <fullName>Program_Sub_Area__c</fullName>
    <label>Program Sub Area</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Program_Area__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Family Preservation</fullName>
            </value>
            <value>
                <fullName>Interagency Family Preservation Services</fullName>
            </value>
            <value>
                <fullName>Investigation Services Provided</fullName>
            </value>
            <value>
                <fullName>Out of Home - Child</fullName>
            </value>
            <value>
                <fullName>Parent/Guardian of Child in OOH</fullName>
            </value>
            <value>
                <fullName>Sibling of Child in OOH</fullName>
            </value>
            <value>
                <fullName>Child of a Minor Parent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>